--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 
 <head>
   <meta charset="utf-8">
+  <title>lec02</title>
 </head>
 
 <body>
-  <form action="/lec02" method="post">
-    <input type="text" name="name" />
-    <input type="submit" value="入室" />
-  </form>
+  <a href="/lec02">lec02へのGETをリクエスト</a>
 </body>
 
 </html>
